
2003-01-10	Gaurav Vaish <gvaish_mono AT lycos.com>

	* DeviceSpecific.cs      : Dummy implementation.
	* MobilePage.cs          : GetControlAdapter(MobileControl) - Stubbed.
	* MobileControl.cs       : Adapter        { get; }      - Implemented
	                         : BreakAfter     { get; set; } - Stubbed.
	                         : DeviceSpecific { get; set; } - Stubbed.
	                         : MobilePage     { get; }      - Stubbed.

2003-01-10	Gaurav Vaish <gvaish_mono AT lycos.com>

	* IObjectListFieldCollection.cs,
	* IPageAdapter.cs,
	* ITemplateable.cs                    : Added interface.
	* ObjectListField.cs                  : Dummy implementation.

2003-01-10	Gaurav Vaish <gvaish_mono AT lycos.com>

	* MobileListItemType.cs,
	* ObjectListViewMode.cs,
	* WmlListFieldType.cs,    // Failed to locate enumeration!
	* Wrapping.cs
	                         : Added enumerations.

2003-01-09	Gaurav Vaish <gvaish_mono AT lycos.com>

	* MobileControl.cs       : Added some more properties (dummies).
	* Alignment.cs,
	* BooleanOption.cs,
	* CommandFormat.cs,
	* FontSize.cs,
	* FormMethod.cs,
	* ListDecoration.cs,
	* ListSelectType.cs,
	                         : Added enumerations.

2003-01-08	Gaurav Vaish <gvaish_mono AT lycos.com>

	* IControlAdapter.cs     : Completed interface.
	* MobileControl.cs       : Initial implementation.
	* MobilePage.cs          : Dummy implementation.
