@@ -1,0 +1,22 @@
+/**
+ * Project   : Mono
+ * Namespace : System.Web.UI.MobileControls
+ * Class     : Panel
+ * Author    : Gaurav Vaish
+ *
+ * Copyright : 2002 with Gaurav Vaish, and with
+ *             Ximian Inc
+ */
+
+using System.Web.UI;
+using System.Web.Mobile;
+
+namespace System.Web.UI.MobileControls
+{
+	public class Panel : MobileControl, ITemplateable
+	{
+		public Panel()
+		{
+		}
+	}
+}
